#项目名称
PROJECT(TEST)
SET(SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
#设置库输出路径
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
#设置可执行文件输出路径
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
MESSAGE(STATUS "THIS CURRENT SOURCE IS DIR " ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "THIS IS BINARY DIR " ${TEST_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR " ${TEST_SOURCE_DIR})
#生成可执行文件
#ADD_EXECUTABLE(ykd ${SRC_LIST})
#生成静态库
ADD_LIBRARY(ykd STATIC ${SRC_LIST})

